# skillatlas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.cl.jac  app.impl.jac  app.jac  models.jac  package-lock.json  package.json  pyproject.toml  styles.css  tools.jac  utils.jac  utils.js  vite.config.js
backend/edges/: edges.impl.jac  edges.jac
backend/models/: models.impl.jac  models.jac
backend/sample_resumes/: amina_resume.docx
backend/utils/: current_time.jac  cv_utils.jac
backend/walkers/: collect_job_postings.jac  profile_manager.impl.jac  profile_manager.jac  resume_parser.impl.jac  resume_parser.jac  save_user_profile.jac  skill_extractor.impl.jac  skill_extractor.jac  store_cv_file.jac
components/auth/: Login.jac  SignUp.jac
components/hero/: Hero.jac
components/landing/: HowItWorks.jac  ValueProposition.jac
components/layout/: Footer.jac  Header.jac  Logo.jac  NavMenu.jac
components/onboarding/: onboarding.jac
core/: serper.jac
edges/: edges.jac
frontend/components/dashboard/: dashboard_header.jac  dashboard_info_panel.jac  dashboard_layout.jac  dashboard_metrics.jac  dashboard_sidebar.jac  dashboard_welcome.jac  job_opportunities.jac  learning_path.jac  metric_card.jac  (+2 more)
frontend/pages/: dashboard.jac  homepage.jac  onboarding.jac
models/: models.impl.jac  models.jac
pages/: HomePage.jac
src/: app.js  styles.css
walkers/: profile_manager.impl.jac  profile_manager.jac  resume_parser.impl.jac  resume_parser.jac  save_user_profile.jac  skill_extractor.impl.jac  skill_extractor.jac  user_walker.jac
(+48 files in other folders)
