[project]
name = "skillatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "byllm>=0.4.8",
    "jac-client>=0.2.1",
    "jaclang>=0.9.1",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
]
